<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <ImageView
        android:src="@drawable/ic_baseline_book_24"
        android:layout_marginBottom="100dp"
        />

    <TableRow
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/account"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/Edit_username"
            android:hint="@string/accountHint"
            android:layout_weight="1"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/Edit_password"
            android:hint="@string/passwordHint"
            android:layout_weight="1"/>
    </TableRow>
    <Button
        android:id="@+id/Button_reg"
        android:text="@string/register"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        />



</TableLayout>