<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBook"
    android:layout_marginTop="50dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    >

    <TableRow
        android:layout_marginBottom="20dp">
    <TextView
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/isbn"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/Edit_ISBN"
        android:layout_weight="1"
        android:inputType="number"
        />
        <ImageButton
            android:id="@+id/Button_scan"
            android:src="@drawable/ic_baseline_qr_code_scanner_24"
            />
    </TableRow>
    <TableRow
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/bookname"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/Edit_name"
            android:layout_weight="1"
            android:inputType="text"
            />
    </TableRow>
    <TableRow
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/author"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/Edit_author"
            android:layout_weight="1"
            android:inputType="text"
            />
    </TableRow>
    <TableRow
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/publishing"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/Edit_publishing"
            android:layout_weight="1"
            android:inputType="text"
            />
    </TableRow>
    <Button
        android:id="@+id/Button_add"
        android:text="@string/addbookButton"
        android:textSize="20sp"/>
    <ImageView
        android:id="@+id/image_Add"/>
</TableLayout>